--- a/EarlMovement/platformio.ini
+++ b/EarlMovement/platformio.ini
@@ -13,3 +13,8 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 
+; [env:esp32]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; monitor_speed = 115200
