--- a/EarlMovement/platformio.ini
+++ b/EarlMovement/platformio.ini
@@ -12,9 +12,11 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 9600
 
-; [env:esp32]
-; platform = espressif32
-; board = esp32dev
+; [env:uno]
+; platform = atmelavr
+; board = uno
 ; framework = arduino
-; monitor_speed = 115200
+; monitor_speed = 9600
+
